[metadata]
name = projetaai-azure
version = 0.0.1
author = Ipiranga
description = 'Enables Azure services integration with ProjetaAi/Kedro'
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    kedro-projetaai @ git+https://github.com/ProjetaAi/kedro-projetaai@develop
    kedro~=0.18.1
    click
    Jinja2
    PyYAML
    requirements_parser
    typing_extensions
    tomli
    adlfs @ git+https://github.com/nickolasrm/adlfs.git@master
    azureml-core
    azureml-pipeline-core
    pandas
    pyarrow
    azure-cli
    docker @ git+https://github.com/gitpushdashf/docker-py.git@master
    azure-ai-ml==0.1.0b4
    universal-pathlib
    pywin32>=304; os_name=='nt'

[options.entry_points]
projetaai.cli =
    azure = projetaai_azure.plugin:AzureCLI
projetaai.starters.ci =
    azure = projetaai_azure.plugin:ci_starters

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-mock
    flake8
    flake8-annotations
    flake8-docstrings
dev =
    %(test)s
    yapf

[options.packages.find]
exclude = 
    tests*
    docs*
